@@ -1,5 +1,8 @@
 2008-04-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
+	* qt4/disp_holder.cpp:
+	- fixed a defect of disp info handling while monitor client mode.
+
 	* qt4/remote_monitor.cpp:
 	- fixed a defect of monitor client connection.
 
